Fixed CSS classes, rearranged Navbar
- Added a wrapper for list container
- Tweaked class name for horizontal scroller container

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -3,7 +3,7 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	padding: 3rem 1.5rem 1rem 1.5rem;
+	padding: 3.25rem 1.5rem 1rem 1.5rem;
 	min-height: 24rem;
 
 	input {
